[gd_scene load_steps=2 format=3 uid="uid://dtf5pvibotgjs"]

[ext_resource type="Script" path="res://gui/drawers/CanvasDrawer.gd" id="1_eu1e8"]

[node name="CanvasDrawer" type="PanelContainer"]
custom_minimum_size = Vector2(320, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"CanvasDrawer"
script = ExtResource("1_eu1e8")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CanvasTitle" type="Label" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Canvas"

[node name="CanvasElements" type="VBoxContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
